include_directories(${CMAKE_SOURCE_DIR}/include)
include_directories(/usr/include/OGRE)
include_directories(/usr/include/bullet)

add_executable(tilt_ball
  AudioSystem.cpp
  BulletDebugDrawer.cpp
  Engine.cpp
  GameState.cpp
  InputSystem.cpp
  IntroState.cpp
  Main.cpp
  MenuState.cpp
  OgreMotionState.cpp
  RunningState.cpp
  Level.cpp
  WallCoordinates.cpp
  WorldObject.cpp)

target_link_libraries(tilt_ball
  LinearMath
  BulletCollision
  BulletDynamics
  BulletSoftBody
  OgreMain
  OIS
  CEGUIBase
  CEGUIOgreRenderer
  boost_regex
  openal
  alut
  vorbis
  vorbisfile)
